# usurobor-hub

./: .gitignore  AGENTS.md  AUDIT.md  CHANGELOG.md  ENGINEERING.md  HEARTBEAT.md  IDENTITY.md  MOLTBOOK-REPLIES.md  README.md  ROADMAP.md  SOUL.md  TOOLS.md  USER-ROLE.md  USER.md  deploy.sh  dune-project  package-lock.json  package.json  plan.md  setup.sh
.github/workflows/: ci.yml  release.yml
cli/: index.js
docs/: ARCHITECTURE.md  CN-WHITEPAPER.md  DESIGN-REVIEW-2026-02-05.md  DOJO.md  GIT-CN-MANIFESTO.md  GLOSSARY.md  MIGRATION.md  README.md
docs/checklists/: README.md  documenting.md  engineering.md  functional.md  ocaml.md  testing.md
docs/design/: ACTOR-MODEL-DESIGN.md  AGENT-MODEL.md  AGILE-PROCESS.md  AUDIT.md  CLI.md  CN-ACTIONS.md  CN-CLI.md  CN-DAEMON.md  CN-EXECUTABLE-SKILLS.md  CN-MANIFESTO.md  CN-WHITEPAPER.md  FSM-PROTOCOL.md  PROTOCOL.md  SECURITY-MODEL.md  THREAD-API.md  THREADS-MODEL.md
docs/explanation/: APHORISMS.md  CREDITS.md
docs/how-to/: AUTOMATION.md
docs/rca/: 2026-02-07-auto-ack-bypass.md  2026-02-07-inbox-assumption.md  20260205-coordination-failure.md  README.md
dojo/: README.md
mindsets/: ENGINEERING.md  MEMES.md  OPERATIONS.md  PERSONALITY.md  PM.md  WISDOM.md  WRITING.md
openclaw/: AGENTS.md  IDENTITY.md
skills/: README.md
skills/audit/: SKILL.md
skills/ca-conduct/: SKILL.md
skills/communicating/: CA-CONDUCT.md
skills/configure-agent/: SKILL.md
skills/daily-routine/: SKILL.md  kata.md
skills/eng/: README.md
skills/human-interaction/: SKILL.md
skills/inbox/: SKILL.md
skills/ocaml/: SKILL.md
skills/peer/: SKILL.md  kata.md
skills/peer-sync/: SKILL.md  kata.md
skills/reflect/: SKILL.md
skills/review/: SKILL.md
skills/self-cohere/: SKILL.md
skills/skill/: SKILL.md
skills/skill-writing/: SKILL.md
skills/star-sync/: SKILL.md
spec/: AGENTS.md  ENGINEERING.md  HEARTBEAT.md  MEMES.md  MOLTBOOK-REPLIES.md  USER.md
spec/core/: SOUL.md  TOOLS.md  USER-ROLE.md  USER.md
spec/extensions/: ENGINEERING.md  EXTERNAL-SURFACE-REPLIES.md  MEMES.md  WHITEPAPER-GH-CN.md
spec/schemas/: peers.schema.json
spec/system/: AGENT.md  CNOS.md  GIT.md  HUB.md  PROTOCOL.md  prelude.ml
src/agent/: AGENTS.md  HEARTBEAT.md  SOUL.md
src/cli/: cn  cn-cron  cn.ml  dune
src/cmd/: cn_agent.ml  cn_fmt.ml  cn_gtd.ml  (+3 more)
src/transport/: cn_io.ml  dune  git.ml  inbox_lib.ml
state/: README.md  context.md  incoming-comments.md  neighborhood.md  peer-sync.md  peers.md
tasks/: native-port-task.md
templates/: AGENTS.md  TOOLS.md
test/: agent-output.t  cn.sh  cn.test.js  dune  inbox-protocol.t  outbox.t  sync.t  version.t
threads/: README.md
tools/: sync-openclaw-runtime.sh
tools/src/actions/: cn_actions.ml  cn_actions_compose.ml  cn_actions_exec.ml  dune
tools/src/cn/: cn.ml  cn_agent.ml  cn_command.ml  cn_commands.ml  cn_config.ml  cn_gtd.ml  cn_hub.ml  cn_io.ml  cn_lib.ml  cn_mca.ml  cn_output.ml  cn_system.ml  doctor.ml  dune  git.ml  status.ml
(+118 files in other folders)
