; Pure types and composition - dual mode for native tests + melange
(library
 (name cn_actions_lib)
 (modules cn_actions cn_actions_compose)
 (modes native melange))

; Melange executor - JS bindings for runtime
(library
 (name cn_actions_exec)
 (modules cn_actions_exec)
 (modes melange)
 (libraries cn_actions_lib)
 (preprocess (pps melange.ppx)))
