; git module (pure git operations)
(library
 (name git)
 (modules git)
 (modes melange)
 (preprocess (pps melange.ppx)))

; cn_io module (CN protocol over git)
(library
 (name cn_io)
 (modules cn_io)
 (libraries git)
 (modes melange)
 (preprocess (pps melange.ppx)))

; cn library (pure functions, testable)
(library
 (name cn_lib)
 (modules cn_lib)
 (libraries inbox_lib)
 (modes :standard melange))

; cn CLI (Melange -> JS)
(melange.emit
 (target output)
 (alias cn)
 (modules cn)
 (libraries cn_lib inbox_lib git cn_io)
 (module_systems commonjs)
 (preprocess (pps melange.ppx)))
