; git module (pure git operations)
(library
 (name git)
 (modules git)
 (libraries unix))

; cn_io module (CN protocol over git)
(library
 (name cn_io)
 (modules cn_io)
 (libraries git unix))

; cn library (pure functions, testable)
(library
 (name cn_lib)
 (modules cn_lib)
 (libraries inbox_lib))

; Native system bindings (stdlib + Unix)
(library
 (name cn_ffi)
 (modules cn_ffi)
 (libraries unix))

; CN command modules (all share cn_ffi, cn_lib)
(library
 (name cn_cmd)
 (wrapped false)
 (modules cn_fmt cn_hub cn_mail cn_gtd cn_agent cn_mca
          cn_commands cn_system)
 (libraries cn_ffi cn_lib inbox_lib git cn_io unix))

; cn CLI (native OCaml binary)
(executable
 (name cn)
 (public_name cn)
 (modules cn)
 (libraries cn_cmd cn_ffi cn_lib inbox_lib git cn_io))
